--- a/code/Avtoservis/package.json
+++ b/code/Avtoservis/package.json
@@ -24,7 +24,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "aos": "^2.3.4",
         "bootswatch": "^4.3.1",
+        "material-design-icons": "^3.0.1",
+        "material-icons": "^0.3.1",
         "tippy.js": "^4.3.1",
         "typed.js": "^2.0.10"
     }
