--- a/code/Avtoservis/package.json
+++ b/code/Avtoservis/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.19.0",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -29,6 +29,7 @@
         "material-design-icons": "^3.0.1",
         "material-icons": "^0.3.1",
         "tippy.js": "^4.3.1",
-        "typed.js": "^2.0.10"
+        "typed.js": "^2.0.10",
+        "vue-tippy": "^2.1.3"
     }
 }
